# rogers-workshop-2

./: index.md
day2/: setup_day2.sh
day2/KPM-Session/: quiz1.sh  quiz2.sh
day2/KPM-Session/collected_metrics/: exporter_stats_kpm.json  exporter_stats_mac.json  exporter_stats_rlc.json  watch_mac_metrics.sh  watch_rlc_metrics.sh
day2/KPM-Session/flexric/: flexric.conf  kpm.config.yaml
day2/KPM-Session/flexric/examples/xApp/c/ctrl/: xapp_rc_slice_ctrl.c
day2/KPM-Session/flexric/examples/xApp/c/monitor/: CMakeLists.txt  get_available_metrics.c  xapp_kpm_moni.c  xapp_kpm_moni_backup.c
day2/KPM-Session/flexric/examples/xApp/c/myxapp/: CMakeLists.txt  kpm.c  kpm.h  rc_ho_slice.c  rc_ho_slice.h  rc_slice.c  rc_slice.h  xapp_kpm.c  xapp_rc_slice_ho.c
day2/KPM-Session/packet_traces/: e2ap_kpm.pcap  e2setup.pcap
day2/KPM-Session/scripts/: configs  export_metrics_to_prometheus.sh  gnb.sh  kpm.config.yaml  kpm_xapp.sh  mac_monitoring_xapp.sh  manual-ue.sh  near_rt_ric.sh  rlc_monitoring_xapp.sh  ue.sh
day2/KPM-Session/scripts/configs/: ue.conf  ue2.conf
day2/KPM-Session/third_party_monitoring/: mac_monitoring_dashboard.json  mac_statistics.txt  pdcp_monitoring_dashboard.json  pdcp_statistics.txt  rlc_monitoring_dashboard.json  rlc_statistics.txt
day2/KPM-Session/visualization/: datasources.yml  docker-compose.yml  grafana.ini  prometheus.yml
day2/ML-Session/: kpis.txt  requirements.txt  workshop_ml.ipynb
day2/Slicing-Session/flexric-slicing/: .gitignore  README.md
day2/Slicing-Session/flexric-slicing/flexric/: CMakeLists.txt
day2/Slicing-Session/flexric-slicing/flexric/.cache/clangd/index/: AMF-UE-NGAP-ID.c.1F08060B5F48287E.idx  AMF-UE-NGAP-ID.c.4FEC1F204C83DD24.idx  AMF-UE-NGAP-ID.c.7457566CE381E5C5.idx  AMF-UE-NGAP-ID.h.473415236C3E2FCD.idx  AMF-UE-NGAP-ID.h.50305E2BCE56DE2C.idx  AMF-UE-NGAP-ID.h.6BF5C0A2FC5EEFDA.idx  AMFName.c.FBBF317B91EF4A35.idx  AMFName.h.AD5BFB0B27AC6251.idx  AMFPointer.c.1DC34D34677E9108.idx  AMFPointer.c.3FCDAA986E7BC24A.idx  AMFPointer.c.E031BCF90C826D23.idx  AMFPointer.h.8CFD4DEF5209EB1A.idx  AMFPointer.h.A3E5DAA99730450F.idx  AMFPointer.h.B1F0848DBCD63B27.idx  (+3122 more)
day2/Slicing-Session/flexric-slicing/flexric/examples/xApp/c/myxapp/: CMakeLists.txt  kpm.c  kpm.h  measurements.csv  rc_ho_slice.c  rc_ho_slice.h  ue_data.csv  xapp_create_slice.c  xapp_rc_slice_ho.c  xapp_slice_handover.c
day2/Slicing-Session/scripts/: .gitignore  gnb.sh  kpm_monitoring_dashboard.json  near_rt_ric.sh  run-ue.sh  set_default_route.sh
day2/Slicing-Session/scripts/configs/: gnb.conf  ue_1.conf  ue_2.conf  ue_3.conf
(+16 files in other folders)
